<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8fcfd"
    android:orientation="vertical"
    android:id="@+id/parent_layout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:layout_margin="10dp"
            android:textSize="36sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:layout_margin="10dp"
            android:textSize="48sp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/p1_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/p1_val"
                android:textColor="#8b4513"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/p2_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/p2_val"
                android:textColor="#8b4513"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/div_val"
                android:textColor="#8b4513"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/del_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/backspace_val"
                android:textColor="#ba4545"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_7"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_8"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:text="@string/val_9"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mul_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/mul"
                android:textColor="#8b4513"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_4"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_5"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="26sp"
                android:text="@string/val_6"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sub_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="#8b4513"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_1"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_2"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/val_3"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="#8b4513"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/c_value"
                android:textColor="#ba4545"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="0"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="."
                android:textSize="26sp"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/res_btn"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#8b4513"
                android:text="="
                android:textColor="@color/teal_200"
                android:textSize="26sp"
                app:cornerRadius="28dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>